--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content" />
     <fragment
         android:id="@+id/mifragment"
-        android:name="com.example.parte2misfragmentos.ListaFragmento"
+        android:name="com.example.parte2misfragmentos.GridFragmento"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
