--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,17 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
     <Spinner
+        android:id="@+id/mispinner"
         android:entries="@array/tipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <fragment
+<!--    <fragment
         android:id="@+id/mifragment"
         android:name="com.example.parte2misfragmentos.GridFragmento"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
+    <FrameLayout
+        android:id="@+id/fragmento"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
