--- a/app/src/main/res/layout/activity_detalle_correo.xml
+++ b/app/src/main/res/layout/activity_detalle_correo.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".DetalleCorreo">
 
+    <TextView
+        android:id="@+id/TxtDetalle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.229"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
