--- a/app/src/main/res/layout/activity_ejemplos_fragment.xml
+++ b/app/src/main/res/layout/activity_ejemplos_fragment.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="58dp"
+        android:onClick="ejemplo1"
         android:text="Ejemplo1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="ejemplo1"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
@@ -24,8 +24,20 @@
         android:layout_marginTop="45dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
+        android:onClick="ejemplo2"
         android:text="Ejemplo2"
         app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        android:onClick="ejemplo2"/>
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginTop="36dp"
+        android:text="Ejemplo3"
+        android:onClick="ejemplo3"
+        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
